--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GithubUsers</string>
+    <string name="label_github_users">Github Users</string>
+    <string name="label_users_details">Users Details</string>
     <string name="blog">Blog</string>
 </resources>
