--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="blog">Blog</string>
     <string name="follower">Follower</string>
     <string name="following">Following</string>
+    <string name="unknown">Unknown</string>
 </resources>
