--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="following">Following</string>
     <string name="unknown">Unknown</string>
     <string name="retry">Retry</string>
+    <string name="unknown_error">Unknown error occurred</string>
 </resources>
