--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="unknown">Unknown</string>
     <string name="retry">Retry</string>
     <string name="unknown_error">Unknown error occurred</string>
+    <string name="user_not_found">User not found</string>
 </resources>
